--- a/project_views/project_views/ata_view/templates/base/base_ata.html
+++ b/project_views/project_views/ata_view/templates/base/base_ata.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <title>{%block title%}{%endblock%}</title>
   </head>
   <body>
@@ -11,18 +11,18 @@
             <div class="row">
                 <div class="col-md-3">
                     <div class="header-name">
-                        Alpha Tech Academy
+                        Alpha Tech Indonesia
                     </div>
                 </div>
                 <div class="col-md-9">
                     <div class="header-notif text-right flex-column">
                         <div class="menu">
                             <ul>
-                                    <a href="#""><li>Home</li></a>
-                                    <a href="#"><li>Blog</li></a>
-                                    <a href="#""><li>Mentor</li></a>
-                                    <a href="#"><li>Mentee</li></a>
-                                    <a href="#"><li>Author</li></a>
+                                    <a href="/""><li>Home</li></a>
+                                    <a href="blog"><li>Blog</li></a>
+                                    <a href="mentor""><li>Mentor</li></a>
+                                    <a href="mentee"><li>Mentee</li></a>
+                                    <a href="author"><li>Author</li></a>
                             </ul>
                         </div>
                     </div>
@@ -39,7 +39,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="header-text-big">
-                    Alpha Tech Academy
+                   Alpha Tech Academy
                     </div>
                   </div>
 
@@ -48,8 +48,8 @@
                   <div class="col-md-12">
                     <div class="header-paragraph">
                       <p>
-                        Alpha tech academy is a tech talent incubator that gives everyone a chance to be a profesional tech Talent within 3 months
-
+                        Alpha Tech Academy is a tech incubator that gives everyone (even non IT background) a chance to be a professional Tech Talent within 3 months.<br> Contact Person: Email: academy@aplhatech.id <br>
+Mobile phone: 0877 9609 9530
                         </p>
 
                     </div>
@@ -66,7 +66,7 @@
   <section class="footer">
       <div class="container-fluid">
           <div class="row row1">
-              <div class="col-md-4 alignright">
+              <div class="col-md-4 alignright our-product">
                       <p>Our Product:</p>
                   </div>
               <div class="col-md-2">
