--- a/project_views/project_views/ata_view/templates/index.html
+++ b/project_views/project_views/ata_view/templates/index.html
@@ -3,29 +3,31 @@
 
 {%block content%}
 
-<div class="container-fluid">
+<div class="container">
     
     <div class="row">
         <div class="col-md-4">
             <div class="logo">
             <img src="https://i.postimg.cc/m2tgpQQg/benefit.png">
+            <br>
             </div>
         </div>
         <div class="col-md-8">
-            Learn Awesome Tech
-            <p>you will learn about programming language suhc as python and javascript  
-                    build backend apps using flask fw with microservice concept , build client side apps udsing react library</p>
+            <h5>Learn Awesome Tech</h5>
+            <p>You will learn about programming language suhc as python and javascript  
+                    build backend apps using flask with microservice concept , build client side apps using react library</p>
         </div>
     </div>
     <div class="row">
             <div class="col-md-4">
                 <div class="logo">
                 <img src="https://i.postimg.cc/L40HPnrK/search-job.png">
+                <br>
                 </div>
             </div>
             <div class="col-md-8">
-                Land New Job
-                <p>if you can pass thi sawrsome program , you will be part of oiur reluable tech learn for especially software engineer position and other tech position as system analys , quality engineer and mmanynmore
+                <h5>Land New Job</h5>
+                <p>if you can pass this awesome program , you will be part of our reluable tech learn for especially software engineer position and other tech position as system analyst , quality engineer and many more
                     </p>
             </div>
         </div>
@@ -33,13 +35,17 @@
         <div class="col-md-4">
             <div class="logo">
             <img src="https://i.postimg.cc/hj2Kpjvm/get-paid.png">
+            <br>
             </div>
         </div>
         <div class="col-md-8">
-            Get Paid To Learn
-            <p>join for free and earn some money , yes yu readthat right , npo registration fee required to entehr this porgram , to make things even better you will receive pocket money just for participating </p>
+            
+            <h5>Get Paid To Learn</h5>
+            <p>Join for free and earn some money , yes you read that right , npo registration fee required to enter this program , to make things even better you will receive pocket money just for participating </p>
         </div>
     </div>
+    <br>
+    <br>
     <div class="row">
             <div class="col-md-4">
                 <div class="logo">
@@ -49,12 +55,12 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-md-8">
-                        Who Are We
-                        <p>alpha tech academy is a talent incubation that fives anyone any chance to learn within  3 MONTH OF  being a professional tech talent. What is our mission? We want to improve capability tech talent in Indonesia</p>
+                        <h5>Who Are We</h5>
+                        <p>Alpha Tech Academy is a talent incubation that fives anyone any chance to learn within  3 MONTH OF  being a professional tech talent. What is our mission? We want to improve capability tech talent in Indonesia</p>
                     </div>
                     <div class="col-md-8">
-                        What Is Our mission
-                        <p>we want to improva capability tech talent in indonesia</p>
+                        <h5> Is Our mission</h5>
+                        <p>We want to improve capability tech talent in indonesia</p>
                     </div>
                 </div>
             </div>
@@ -63,6 +69,7 @@
         <!-- <div class="col-md-4"></div> -->
         <div class="col-md-8">
         <div class="aligncenter logo-table">
+            <h5>What Will You Learn?</h5>
             <table class="">
                 <tr>
                     <td>
